# quantumORB

./: .gitignore  FINAL_PAPER_RESULTS.md  README.md  pyproject.toml  requirements.txt  run_final_paper_experiment.bat  run_github_repro_pipeline.bat  run_setup_quality_research_pipeline.bat  run_ta_repro.bat
config/: default.yaml
examples/: build_nq_setup_quality_dataset.py  build_setup_quality_sequence_dataset.py  preprocess_nq_dataset.py  run_final_paper_experiment.py  run_github_repro_pipeline.py  run_nq_debug_2023H1.py  run_nq_debug_2023H1_rr_compare.py  run_nq_orb_session_vwap_retest_full.py  run_nq_real_pipeline.py  run_orb_managed_profile_compare.py  run_orb_regime_mode_compare.py  run_rp_profits_8am_orb_2023H1.py  run_rp_profits_8am_orb_2023H1_compare.py  run_rp_profits_8am_orb_bos_diagnostics_full.py  run_rp_profits_8am_orb_bos_window_compare_2023H1.py  run_rp_profits_8am_orb_bos_window_compare_full.py  run_rp_profits_8am_orb_full.py  run_rp_profits_8am_orb_full_compare.py  run_rp_profits_8am_orb_full_entry_family_compare.py  run_rp_profits_8am_orb_vwap_displacement_full.py  run_setup_quality_baseline.py  run_setup_quality_ga_optimizer.py  run_setup_quality_lstm.py  run_setup_quality_model_comparison.py  run_setup_quality_research_pipeline.py  run_stage_comparison_suite.py
src/: __init__.py
tests/: test_backtest_engine.py  test_config.py  test_data_pipeline.py  test_evaluation_metrics.py  test_features.py  test_ga_setup_quality.py  test_indicators.py  test_labeling.py  test_model_baselines.py  test_model_lstm.py  test_nq_operational_strategy.py  (+9 more)
(+53 files in other folders)
